# McPixMirror

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: deploy.md
mcpixmirror/: __init__.py  actions.py  app.py  config.py  connection.py  discovery.py  security.py
scripts/: build_app.sh
tests/: test_actions.py  test_connection.py  test_discovery.py  test_security.py
